--- a/static/index.html
+++ b/static/index.html
@@ -5,9 +5,19 @@
     <title>RentPro</title>
     <script src="http://ajax.aspnetcdn.com/ajax/jquery/jquery-1.9.0.js"></script>
     <script type="text/javascript">
+    $(document).ready(function(){
+   $.getJSON("/tenant?id=0",function(result){
+    $.each(result, function(i, field){
+   $.each(field, function(j, field2){
+      $("#contentAll").append(j+" "+field2 + " ");
+    });
+  $("#contentAll").append("<br/>");
+  });
+    });
+      });
 function getJSON()
 {
- $.getJSON("/tenant/1",function(result){
+ $.getJSON("/tenant?id=1",function(result){
     $.each(result, function(i, field){
       $("#content").append(i+" "+field + " <br/>");
     });
@@ -16,10 +26,15 @@ function getJSON()
     </script>
 </head>
 <body>
+<header style="background-color: gray;">这里要引用header</header>
     <h3>welcome to RentPro</h3>
 from static/index.html
-    <div id="content"></div>
-<input type="button" onclick="getJSON()" id="button" value="getJSON">
 
+    <div id="contentAll"><h1>客户信息</h1></div>
+
+<input type="button" onclick="getJSON()" id="button" value="getJSON">
+    <div id="content"></div>
+
+<footer style="background-color: gray;">这里要引用footer</footer>
 </body>
 </html>
