在intel630上编写代码, 搭配个开发环境都花了我两个小时 web框架改用tango了, 虽然没有例子, 但是不懂问作者还是比较方便. 增加一个登录窗口用户测试.

--- a/static/index.html
+++ b/static/index.html
@@ -51,6 +51,7 @@ function getJSON(){
 <header style="background-color: gray;">这里要引用header</header>
     <h3>welcome to RentPro</h3>from static/index.html
 <input type="button" id="btnLogin" value="登---录">
+<a href="login2.html"> 登录界面</a>
 
     <div id="contentAll"><h1>客户信息</h1></div>
 
