--- a/static/login2.html
+++ b/static/login2.html
@@ -12,6 +12,8 @@
     用户名:<input type="text" id="txtname"  value="hefju">
     密码:<input type="password" id="txtpwd" value="28ww">
     <input type="button" id="btnLogin"  value="登陆">
+      <input type="button" id="btnRedirect"  value="重定向">
+      <div id="dvError"></div>
 </div>
 <span id="divMsg"></span>
 
