增加employee。html测试页。修改主页的菜单明细。

--- a/static/indexmaintable.html
+++ b/static/indexmaintable.html
@@ -40,25 +40,35 @@
           <!-- Add the class "current" to current menu item -->
           人&nbsp&nbsp&nbsp&nbsp&nbsp事 </a>
           <ul>
-            <li><a href="#" hrefName="tab1">人事管理</a></li>
+            <li><a href="#" hrefName="tab1">员工档案</a></li>
             <li><a class="current" href="#" hrefName="tab2">考勤管理</a></li>
             <!-- Add class "current" to sub menu items also -->
-            <li><a href="#" hrefName="tab3">离职设置</a></li>
-            <li><a href="#" hrefName="tab4">法定加班日设置</a></li>
+            <li><a href="#" hrefName="tab11">法定加班日设置</a></li>
+              <li><a href="#" hrefName="tab12">社保公积金</a></li>
+              <li><a href="#" hrefName="tab13">工资</a></li>
+              <li><a href="#" hrefName="tab14">综合查询</a></li>
+              <li><a href="#" hrefName="tab15">人事月报表</a></li>
           </ul>
+        </li>
+        <li> <a href="#" class="nav-top-item"> 系统参数设置 </a>
+        <ul>
+          <li><a href="#" hrefName="tab21">公司架构</a></li>
+            <li><a href="#" hrefName="tab22">离职设置</a></li>
+          <li><a href="#" hrefName="tab23">Manage Pages</a></li>
+        </ul>
         </li>
         <li> <a href="#" class="nav-top-item"> Pages </a>
           <ul>
-            <li><a href="#" hrefName="tab5">Create a new Page</a></li>
-            <li><a href="#" hrefName="tab6">Manage Pages</a></li>
+            <li><a href="#" hrefName="tab31">Create a new Page</a></li>
+            <li><a href="#" hrefName="tab32">Manage Pages</a></li>
           </ul>
         </li>
         <li> <a href="#" class="nav-top-item"> Image Gallery </a>
           <ul>
-            <li><a href="#" hrefName="tab5">Upload Images</a></li>
-            <li><a href="#" hrefName="tab6">Manage Galleries</a></li>
-            <li><a href="#" hrefName="tab7">Manage Albums</a></li>
-            <li><a href="#" hrefName="tab8">Gallery Settings</a></li>
+            <li><a href="#" hrefName="tab41">Upload Images</a></li>
+            <li><a href="#" hrefName="tab42">Manage Galleries</a></li>
+            <li><a href="#" hrefName="tab43">Manage Albums</a></li>
+            <li><a href="#" hrefName="tab44">Gallery Settings</a></li>
           </ul>
         </li>
         <li> <a href="#" class="nav-top-item"> Events Calendar </a>
