--- a/static/indexmaintable.html
+++ b/static/indexmaintable.html
@@ -14,7 +14,7 @@
 <script type="text/javascript" src="resources/scripts/facebox.js"></script>
 <!-- jQuery WYSIWYG Plugin -->
 <script type="text/javascript" src="resources/scripts/jquery.wysiwyg.js"></script>
-<!-- jQuery Datepicker Plugin -->
+<!-- jQuery Datepicker Plugin1 -->
 <script type="text/javascript" src="resources/scripts/jquery.datePicker.js"></script>
 <script type="text/javascript" src="resources/scripts/jquery.date.js"></script>
 <script type="text/javascript" src="resources/scripts/clickclass.js"></script>
