--- a/static/indexmaintable.html
+++ b/static/indexmaintable.html
@@ -33,20 +33,30 @@
         <a href="#" title="View the Site">View the Site</a> | <a href="#" title="Sign Out">Sign Out</a> </div>
       <ul id="main-nav">
         <!-- Accordion Menu -->
-        <li> <a href="#/" class="nav-top-item no-submenu">
-          <!-- Add the class "no-submenu" to menu items with no sub menu -->
-          主&nbsp&nbsp&nbsp&nbsp&nbsp页 </a> </li>
-        <li> <a href="#" class="nav-top-item current">
-          <!-- Add the class "current" to current menu item -->
-          人&nbsp&nbsp&nbsp&nbsp&nbsp事 </a>
-          <ul>
-            <li><a href="#" hrefName="tab1" iframeName="RS/employee">人事管理</a></li>
-            <li><a href="#" hrefName="tab2" iframeName="table">考勤管理</a></li>
-            <!-- Add class "current" to sub menu items also -->
-            <li><a href="#" hrefName="tab3" iframeName="#">离职设置</a></li>
-            <li><a href="#" hrefName="tab4" iframeName="#">法定加班日设置</a></li>
-          </ul>
-        </li>
+          <li> <a href="#/" class="nav-top-item no-submenu">
+              <!-- Add the class "no-submenu" to menu items with no sub menu -->
+              主&nbsp&nbsp&nbsp&nbsp&nbsp页 </a> </li>
+          <li> <a href="#" class="nav-top-item current">
+              <!-- Add the class "current" to current menu item -->
+              人&nbsp&nbsp&nbsp&nbsp&nbsp事 </a>
+              <ul>
+                  <li><a href="#" hrefName="tab1">员工档案</a></li>
+                  <li><a class="current" href="#" hrefName="tab2">考勤管理</a></li>
+                  <!-- Add class "current" to sub menu items also -->
+                  <li><a href="#" hrefName="tab11">法定加班日设置</a></li>
+                  <li><a href="#" hrefName="tab12">社保公积金</a></li>
+                  <li><a href="#" hrefName="tab13">工资</a></li>
+                  <li><a href="#" hrefName="tab14">综合查询</a></li>
+                  <li><a href="#" hrefName="tab15">人事月报表</a></li>
+              </ul>
+          </li>
+          <li> <a href="#" class="nav-top-item"> 系统参数设置 </a>
+              <ul>
+                  <li><a href="#" hrefName="tab21">公司架构</a></li>
+                  <li><a href="#" hrefName="tab22">离职设置</a></li>
+                  <li><a href="#" hrefName="tab23">Manage Pages</a></li>
+              </ul>
+          </li>
         <li> <a href="#" class="nav-top-item"> Pages </a>
           <ul>
             <li><a href="#" hrefName="tab5" iframeName="#">Create a new Page</a></li>
