1、完善界面的样式 2、左导航停靠（未完成） 3、加了页头

--- a/static/table.html
+++ b/static/table.html
@@ -134,6 +134,7 @@
         //sortName: 'code',
         //sortOrder: 'desc',
         remoteSort: false,
+        fit:true,
         idField: 'code',
         frozenColumns: [[
             { title: '固有ID', field: 'ID', width: 150, sortable: false },
@@ -216,7 +217,7 @@
 		<a href="#" onclick="mergeCells()">MergeCells</a>
 	</div>-->
 	
-	<table id="test"></table>
+	<table id="test" style="width:auto"></table>
 	
 </body>
 </html>
