主界面样式修改

--- a/static/indexmaintable.html
+++ b/static/indexmaintable.html
@@ -32,8 +32,7 @@
 </style>-->
 <body>
 <div id="body-wrapper">
-  <div id="topmain">
-  </div>
+
   <div id="sidebar">
     <div id="sidebar-wrapper">
       <!-- Sidebar with logo and menu -->
@@ -44,7 +43,7 @@
       <div id="profile-links"> Hello, <a href="#" title="Edit your profile">admin</a>, you have <a href="#messages" rel="modal" title="3 Messages">3 Messages</a><br />
         <br />
         <a href="#" title="View the Site">View the Site</a> | <a href="#" title="Sign Out">Sign Out</a> </div>
-      <ul id="main-nav">
+	  <ul id="main-nav">
         <!-- Accordion Menu -->
           <li> <a href="#/" class="nav-top-item no-submenu">
               <!-- Add the class "no-submenu" to menu items with no sub menu -->
@@ -53,14 +52,14 @@
               <!-- Add the class "current" to current menu item -->
               人&nbsp&nbsp&nbsp&nbsp&nbsp事 </a>
               <ul>
-                  <li><a href="#" hrefName="tab1" iframeName="table">员工档案</a></li>
-                  <li><a class="current" href="#" hrefName="tab">考勤管理</a></li>
+                  <li><a href="#" hrefName="tab31" iframeName="table">员工档案</a></li>
+                  <li><a href="#" hrefName="tab32"  iframeName="table1">考勤管理</a></li>
                   <!-- Add class "current" to sub menu items also -->
-                  <li><a href="#" hrefName="tab11">法定加班日设置</a></li>
-                  <li><a href="#" hrefName="tab12">社保公积金</a></li>
-                  <li><a href="#" hrefName="tab13">工资</a></li>
-                  <li><a href="#" hrefName="tab14">综合查询</a></li>
-                  <li><a href="#" hrefName="tab15">人事月报表</a></li>
+                  <li><a href="#" hrefName="tab33" iframeName="table2">法定加班日设置</a></li>
+                  <li><a href="#" hrefName="tab34" iframeName="table3">社保公积金</a></li>
+                  <li><a href="#" hrefName="tab35" iframeName="table4">工资</a></li>
+                  <li><a href="#" hrefName="tab36" iframeName="table5">综合查询</a></li>
+                  <li><a href="#" hrefName="tab37" iframeName="table6">人事月报表</a></li>
               </ul>
           </li>
           <li> <a href="#" class="nav-top-item"> 系统参数设置 </a>
@@ -72,31 +71,31 @@
           </li>
         <li> <a href="#" class="nav-top-item"> Pages </a>
           <ul>
-            <li><a href="#" hrefName="tab5" iframeName="#">Create a new Page</a></li>
-            <li><a href="#" hrefName="tab6" iframeName="#">Manage Pages</a></li>
+            <li><a href="#" hrefName="tab5" iframeName="#1">Create a new Page</a></li>
+            <li><a href="#" hrefName="tab6" iframeName="#2">Manage Pages</a></li>
           </ul>
         </li>
         <li> <a href="#" class="nav-top-item"> Image Gallery </a>
           <ul>
-            <li><a href="#" hrefName="tab5" iframeName="#">Upload Images</a></li>
-            <li><a href="#" hrefName="tab6" iframeName="#">Manage Galleries</a></li>
-            <li><a href="#" hrefName="tab7" iframeName="#">Manage Albums</a></li>
-            <li><a href="#" hrefName="tab8" iframeName="#">Gallery Settings</a></li>
+            <li><a href="#" hrefName="tab5" iframeName="#3">Upload Images</a></li>
+            <li><a href="#" hrefName="tab6" iframeName="#4">Manage Galleries</a></li>
+            <li><a href="#" hrefName="tab7" iframeName="#5">Manage Albums</a></li>
+            <li><a href="#" hrefName="tab8" iframeName="#6">Gallery Settings</a></li>
           </ul>
         </li>
         <li> <a href="#" class="nav-top-item"> Events Calendar </a>
           <ul>
-            <li><a href="#" hrefName="tab9" iframeName="#">Calendar Overview</a></li>
-            <li><a href="#" hrefName="tab10" iframeName="#">Add a new Event</a></li>
-            <li><a href="#" hrefName="tab11" iframeName="#">Calendar Settings</a></li>
+            <li><a href="#" hrefName="tab9"  iframeName="#7">Calendar Overview</a></li>
+            <li><a href="#" hrefName="tab10" iframeName="#8">Add a new Event</a></li>
+            <li><a href="#" hrefName="tab11" iframeName="#9">Calendar Settings</a></li>
           </ul>
         </li>
         <li> <a href="#" class="nav-top-item"> Settings </a>
           <ul>
-            <li><a href="#" hrefName="tab12" iframeName="#">General</a></li>
-            <li><a href="#" hrefName="tab13" iframeName="#">Design</a></li>
-            <li><a href="#" hrefName="tab14" iframeName="#">Your Profile</a></li>
-            <li><a href="#" hrefName="tab15" iframeName="#">Users and Permissions</a></li>
+            <li><a href="#" hrefName="tab12" iframeName="#10">General</a></li>
+            <li><a href="#" hrefName="tab13" iframeName="#11">Design</a></li>
+            <li><a href="#" hrefName="tab14" iframeName="#12">Your Profile</a></li>
+            <li><a href="#" hrefName="tab15" iframeName="#13">Users and Permissions</a></li>
           </ul>
         </li>
       </ul>
@@ -129,7 +128,7 @@
     </div>
     <div id="Clickcss1">
    <div id="Clickcss"> 
-    <!--<input type="checkbox" id="joacims-menu" checked/>-->
+   
     <h5 id="joacims-menu"><</br><</h5>
 </div></div>
   </div>
